[gd_scene load_steps=58 format=3 uid="uid://defyvg2kxdcd5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_puous"]
[ext_resource type="Texture2D" uid="uid://bucvlokpesqxh" path="res://sprites/characters/player.png" id="1_y7bs2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5oha2"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0j6c"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_buh2a"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfagu"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lepnx"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqy8y"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0ji8"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_brnfs"]
atlas = ExtResource("1_y7bs2")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp0n0"]
atlas = ExtResource("1_y7bs2")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkwha"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiuwk"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1phyn"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k52uu"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ycn"]
atlas = ExtResource("1_y7bs2")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kgqn"]
atlas = ExtResource("1_y7bs2")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_okw80"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x6wt"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_udbpw"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f42u"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpgf7"]
atlas = ExtResource("1_y7bs2")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_odya1"]
atlas = ExtResource("1_y7bs2")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux5c2"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7kds"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwyym"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg8hl"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufikt"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvo8x"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea2b5"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x32ua"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0ax"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7r7i"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_726c5"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja1pi"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw7l6"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_japb1"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ferj"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xeu"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_al215"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij163"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w74qa"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7538s"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_02erp"]
atlas = ExtResource("1_y7bs2")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jabuo"]
atlas = ExtResource("1_y7bs2")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7t8o"]
atlas = ExtResource("1_y7bs2")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndtq8"]
atlas = ExtResource("1_y7bs2")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_un1j3"]
atlas = ExtResource("1_y7bs2")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctaor"]
atlas = ExtResource("1_y7bs2")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnx2x"]
atlas = ExtResource("1_y7bs2")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouldw"]
atlas = ExtResource("1_y7bs2")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7jfh2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oha2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0j6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buh2a")
}],
"loop": true,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfagu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lepnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0ji8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brnfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp0n0")
}],
"loop": true,
"name": &"e-walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkwha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiuwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1phyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k52uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ycn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kgqn")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okw80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x6wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udbpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f42u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpgf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odya1")
}],
"loop": true,
"name": &"n-walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux5c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7kds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwyym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg8hl")
}],
"loop": true,
"name": &"parry-e",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufikt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvo8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea2b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x32ua")
}],
"loop": true,
"name": &"parry-n",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd0ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7r7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_726c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja1pi")
}],
"loop": true,
"name": &"parry-s",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw7l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_japb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ferj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xeu")
}],
"loop": true,
"name": &"parry-w",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_al215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij163")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w74qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7538s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02erp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jabuo")
}],
"loop": true,
"name": &"s-walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7t8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndtq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un1j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctaor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnx2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouldw")
}],
"loop": true,
"name": &"w-walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tec78"]
radius = 9.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gxcj6"]
radius = 11.0
height = 40.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1a4x"]
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l13gk"]
bg_color = Color(0.160784, 0.709804, 0.376471, 1)
corner_detail = 20

[sub_resource type="CircleShape2D" id="CircleShape2D_avl7v"]
radius = 96.0469

[node name="player" type="CharacterBody2D"]
z_index = 3
script = ExtResource("1_puous")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7jfh2")
animation = &"death"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 24)
shape = SubResource("CapsuleShape2D_tec78")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 13)
shape = SubResource("CapsuleShape2D_gxcj6")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="healthBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -31.0
offset_top = -13.0
offset_right = 31.0
offset_bottom = -7.0
theme_override_styles/background = SubResource("StyleBoxFlat_o1a4x")
theme_override_styles/fill = SubResource("StyleBoxFlat_l13gk")
show_percentage = false

[node name="spikes" type="Node2D" parent="."]

[node name="areaParry" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaParry"]
position = Vector2(-1, 19)
shape = SubResource("CircleShape2D_avl7v")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="areaParry" to="." method="_on_area_parry_area_entered"]
[connection signal="area_exited" from="areaParry" to="." method="_on_area_parry_area_exited"]
